<resources>
    <string name="app_name">DOTODO</string>
    <string name="loginpg">login Page</string>
    <string name="regpg">Register Page</string>
    <string name="email">Email</string>
    <string name="usrname">Username</string>
    <string name="password">Password</string>
    <string name="crtpassword">Create Password</string>
    <string name="repassword">Re-enter Password</string>
    <string name="forgotpass">Forgot Password ?</string>
    <string name="newuser">New User ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="alrdreg">Already Registered?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_frag">Home fragment</string>
    <string name="profile">PROFILE</string>
    <string name="notes">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>