<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">



<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/app_name"-->
<!--        android:textSize="50sp"-->
<!--        android:fontFamily="serif-monospace"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="#FFFFFF"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginpg"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:padding="10dp"
            android:textAlignment="center"
            android:background="@drawable/button1"
            android:textColorHint="#000000"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/passet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:background="@drawable/button1"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:autofillHints="password"
            android:hint="@string/password"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forgottv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpass"
        android:textColor="#FFFFFF"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:background="@drawable/button1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/alreadyregtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newuser"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>


    </LinearLayout>

</LinearLayout>